classDiagram
        class TeachingBook {
        +id: str
        +title: str
        +level: str
    }

    class Unit {
        +id: str
        +name: str
        +teaching_book_id: str
    }

    class Chapter {
        +id: str
        +name: str
        +unit_id: str
    }

    class Section {
        +id: str
        +name: str
        +learning_objective: str
        +chapter_id: str
    }

    class TeachingBookLearningObjective {
        +id: str
        +name: str
        +section_id: str
    }

    class TeachingBookActivityItem {
        +id: str
        +item_type: str
        +item_text: str
        +section_id: str
    }

    class TargetLanguage {
        +id: str
        +name: str
    }

    class TargetObjective {
        +id: str
        +name: str
    }

    class Learner {
        +id: str
        +name: str
        +targetLanguage: TargetLanguage
        +activities: List~Activity~
        +topicsOfInterest: List~TopicOfInterest~
    }

    class TopicOfInterest {
        +id: str
        +name: str
        +contentItems: List~TopicContentItem~
    }

    class TopicContentItem {
        +id: str
        +title: str
        +description: str
        +url: str
    }

    class IContextComponent {
        <<interface>>
        +id: str
    }

    class Sentence {
        +id: str
        +text: str
    }

    class Word {
        +id: str
        +value: str
    }

    class WordPair {
        +id: str
        +word1: Word
        +word2: Word
    }

    class Bigram {
        +id: str
        +word1: str
        +word2: str
    }

    class Image {
        +id: str
        +url: str
    }

    class Context {
        +id: str
        +description: str
        +components: List~IContextComponent~
        +add_component(component: IContextComponent)
    }

    class Activity {
        +id: str
        +name: str
        +context: Context
        +skills: List~Skill~
        +targetObjective: TargetObjective
    }

    class ActivityCollection {
        +id: str
        +name: str
        +targetObjective: TargetObjective
        +activities: List~Activity~
        +add_activity(activity: Activity)
    }

    class Skill {
        +id: str
        +description: str
        +is_correct: bool
        +positive_examples: List~PositiveExample~
        +negative_examples: List~NegativeExample~
    }

    class PositiveExample {
        +id: str
        +example_text: str
    }

    class NegativeExample {
        +id: str
        +example_text: str
    }

    class Session {
        +id: str
        +name: str
        +activities: List~Activity~
        +add_activity(activity: Activity)
    }

    class Assessment {
        +id: str
        +name: str
        +activities: List~Activity~
        +sessions: List~Session~
        +add_activity(activity: Activity)
        +add_session(session: Session)
    }

    TargetLanguage "1" *-- "0..*" Learner : has
    TargetObjective "1" *-- "0..*" Activity : has
    TargetObjective "1" *-- "0..*" ActivityCollection : has

    IContextComponent <|-- Sentence
    IContextComponent <|-- Word
    IContextComponent <|-- WordPair
    IContextComponent <|-- Bigram
    IContextComponent <|-- Image

    Context "1" *-- "1..*" IContextComponent : contains
    Activity "1" *-- "1" Context : has
    ActivityCollection "1" *-- "0..*" Activity : contains

    WordPair "1" *-- "2" Word : composed of

    Skill "1" *-- "0..*" PositiveExample : has
    Skill "1" *-- "0..*" NegativeExample : has
    Skill "1" *-- "1..*" Word : uses
    Skill "1" *-- "0..*" WordPair : uses

    Session "1" *-- "0..*" Activity : contains
    Activity "1" *-- "1..*" Skill : related to

    Assessment "1" *-- "0..*" Activity : contains
    Assessment "1" *-- "0..*" Session : done in

    Learner "1" *-- "0..*" Activity : performs
    Learner "1" *-- "0..*" TopicOfInterest : interested in
    TopicOfInterest "1" *-- "0..*" TopicContentItem : contains

    TeachingBook "1" *-- "1..*" Unit : contains
    Unit "1" *-- "1..*" Chapter : contains
    Chapter "1" *-- "1..*" Section : contains
    Section "1" *-- "1..*" TeachingBookActivityItem : contains
    Section "1" *-- "1" TeachingBookLearningObjective : has
